# mp3pic

./: .gitignore  Justfile  Pipfile  README.md  dev-requirements.txt  mp3pic.py  pyproject.toml  requirements-dev.txt  requirements.txt
mp3pic/: __init__.py
tests/: test_mp3pic.py
