[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mp3pic"
dynamic = ["version"]
description = 'Command-line utility to add a cover-art image to a mp3 file.'
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = [ "mp3", "id3"]

authors = [
  { name = "Bill Melvin", email = "bill@billmelvin.com" },
]

dependencies = [ "mutagen", "pillow" ]

[project.urls]
Source = "https://github.com/wmelvin/mp3pic"

[tool.setuptools.dynamic]
version = {attr = "mp3pic.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["mp3pic*"]
exclude = ["test*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["."]

[project.scripts]
mp3pic = "mp3pic:main"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
# extend-select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",    # assert
]
